# app/controllers/diffExpression.py
@@ -4,17 +4,15 @@ from app.config import LATEST
 from app.controllers.dataset import _dataset_query
 from app.controllers.comparison import _comparison_query
 
-def get_diff_expr(dataset_ID_1: str = None, dataset_ID_2: int = None, disease_name_1=None, disease_name_2=None, disease_subtype_1=None, disease_subtype_2=None, condition_1=None, 
-                  condition_2=None, ensg_number=None, gene_symbol=None, sponge_db_version: int = LATEST):
+def get_diff_expr(dataset_ID_1: str = None, dataset_ID_2: int = None, 
+                  condition_1=None, condition_2=None, 
+                  ensg_number=None, gene_symbol=None, sponge_db_version: int = LATEST, 
+                  limit: int = None, offset: int = None):
     """
     API call /differentialExpression,
     get differential expression results between genes
     :param dataset_ID_1: dataset_ID of the first dataset of interest
     :param dataset_ID_2: dataset_ID of the second dataset of interest
-    :param disease_name_1: disease name of the first part of comparison (e.g. Sarcoma)
-    :param disease_name_2: disease name of the second part of comparison (e.g. Sarcoma)
-    :param disease_subtype_1: subtype of first part of comparison, overtype if none is provided (e.g. LMS) 
-    :param disease_subtype_2: subtype of second part of comparison, overtype if none is provided (e.g. LMS) 
     :param condition_1: condition of first part of comparison (e.g. disease, normal)
     :param condition_2: condition of second part of comparison (e.g. disease, normal)
     :param ensg_number: esng number of the gene(s) of interest
@@ -45,13 +43,16 @@ def get_diff_expr(dataset_ID_1: str = None, dataset_ID_2: int = None, disease_na
     if len(gene) > 0:
         gene_IDs = [i.gene_ID for i in gene]
 
-    dataset_1 = _dataset_query(sponge_db_version=sponge_db_version, disease_name=disease_name_1, dataset_ID=dataset_ID_1)
+    dataset_1 = _dataset_query(sponge_db_version=sponge_db_version, dataset_ID=dataset_ID_1)
     dataset_1 = [x.dataset_ID for x in dataset_1]
 
-    dataset_2 = _dataset_query(sponge_db_version=sponge_db_version, disease_name=disease_name_2, dataset_ID=dataset_ID_2)
+    dataset_2 = _dataset_query(sponge_db_version=sponge_db_version, dataset_ID=dataset_ID_2)
     dataset_2 = [x.dataset_ID for x in dataset_2]
 
     comparisons, reverse = _comparison_query(dataset_1, dataset_2, condition_1, condition_2, "gene")
+
+    if type(comparisons) is not list: 
+        return comparisons
 
     comparison_ID = comparisons[0].comparison_ID
 
@@ -61,6 +62,10 @@ def get_diff_expr(dataset_ID_1: str = None, dataset_ID_2: int = None, disease_na
     if len(gene) > 0:
         result = result.filter(models.DifferentialExpression.gene_ID.in_(gene_IDs))
 
+    if limit is not None:
+        result = result.limit(limit)
+    if offset is not None:
+        result = result.offset(offset)
     result = result.all()
 
     if len(result) > 0:
@@ -81,17 +86,15 @@ def get_diff_expr(dataset_ID_1: str = None, dataset_ID_2: int = None, disease_na
         }), 200
 
 
-def get_diff_expr_transcript(dataset_ID_1: int = None, dataset_ID_2: int = None, disease_name_1=None, disease_name_2=None, disease_subtype_1=None, disease_subtype_2=None, 
-                             condition_1=None, condition_2=None, enst_number=None, sponge_db_version: int = LATEST):
+def get_diff_expr_transcript(dataset_ID_1: int = None, dataset_ID_2: int = None, 
+                             condition_1=None, condition_2=None, 
+                             enst_number=None, sponge_db_version: int = LATEST,
+                             limit: int = None, offset: int = None):
     """
     API call /differentialExpressionTranscript,
     get differential expression results between transcripts.
     :param dataset_ID_1: dataset_ID of the first dataset of interest
     :param dataset_ID_2: dataset_ID of the second dataset of interest
-    :param disease_name_1: disease name of the first part of comparison (e.g. Sarcoma)
-    :param disease_name_2: disease name of the second part of comparison (e.g. Sarcoma)
-    :param disease_subtype_1: subtype of first part of comparison, overtype if none is provided (e.g. LMS) 
-    :param disease_subtype_2: subtype of second part of comparison, overtype if none is provided (e.g. LMS) 
     :param condition_1: condition of first part of comparison (e.g. disease, normal)
     :param condition_2: condition of second part of comparison (e.g. disease, normal)
     :param enst_number: esng number of the transcript(s) of interest
@@ -109,10 +112,10 @@ def get_diff_expr_transcript(dataset_ID_1: int = None, dataset_ID_2: int = None,
     if len(transcript) > 0:
         transcript_IDs = [i.transcript_ID for i in transcript]
 
-    dataset_1 = _dataset_query(sponge_db_version=sponge_db_version, disease_name=disease_name_1, dataset_ID=dataset_ID_1)
+    dataset_1 = _dataset_query(sponge_db_version=sponge_db_version, dataset_ID=dataset_ID_1)
     dataset_1 = [x.dataset_ID for x in dataset_1]
 
-    dataset_2 = _dataset_query(sponge_db_version=sponge_db_version, disease_name=disease_name_2, dataset_ID=dataset_ID_2)
+    dataset_2 = _dataset_query(sponge_db_version=sponge_db_version, dataset_ID=dataset_ID_2)
     dataset_2 = [x.dataset_ID for x in dataset_2]
 
     comparisons, reverse = _comparison_query(dataset_1, dataset_2, condition_1, condition_2, "transcript")
@@ -123,6 +126,11 @@ def get_diff_expr_transcript(dataset_ID_1: int = None, dataset_ID_2: int = None,
 
     if len(transcript) > 0:
         result = result.filter(models.DifferentialExpression.transcript_ID.in_(transcript_IDs))
+
+    if limit is not None:
+        result = result.limit(limit)
+    if offset is not None:  
+        result = result.offset(offset)
 
     result = result.all()
 
